# educationC

./: CMakeLists.txt  README.md  run.sh  run.sh.in
12/: 01.md  06.cpp  07.cpp  09.cpp
13/: 01.cpp  02.cpp  03.cpp  05.cpp  08.cpp  10.cpp
13/05/: input.txt
14/: 01.md  02.md  03.cpp  05.cpp
1_dir/: coutWithoutMain.cpp
2_dir/: sortShell.cpp  tower.cpp
3_dir/: myVector.cpp  squareRectangle.cpp
